...
        guard let self = self else { return }
        self.updateAvatar()
      }
  }
  func didTapLogoutButton() {
    let alert = UIAlertController(
      title: "Пока, пока!",
      message: "Уверены, что хотите выйти",
      preferredStyle: .alert
    )
    alert.addAction(UIAlertAction(title: "Нет", style: .cancel, handler: nil))
    alert.addAction(UIAlertAction(title: "Да", style: .default) { [weak self] _ in
      ProfileLogoutService.shared.logout()
    })
    alert.view.accessibilityIdentifier = "logoutAlert"
    view?.present(alert, animated: true, completion: nil)
  }
}
...
