...
    let label = UILabel()
    label.text = "Hello, World!"
    label.textColor = .ypWhite
    label.font = .systemFont(ofSize: 13, weight: .regular)
    return label
  }()
  let logoutButton: UIButton = {
    let button = UIButton.systemButton(
      with: UIImage(systemName: "ipad.and.arrow.forward")!,
      target: self,
      action: #selector(Self.didTapLogoutButton)
    )
    button.tintColor = .ypRed
...
